--- a/src/tools/Netsphere.Tools.ShopEditor/Views/Controls/PriceGroup.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/Controls/PriceGroup.xaml
@@ -33,7 +33,7 @@
       <ItemsControl.ItemTemplate>
         <DataTemplate>
           <Border BorderThickness="1" BorderBrush="Black" Margin="2">
-            <controls:PriceItem Margin="5" />
+            <controls:Price Margin="5" />
           </Border>
         </DataTemplate>
       </ItemsControl.ItemTemplate>
