--- a/src/tools/Netsphere.Tools.ShopEditor/Views/PricesView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/PricesView.xaml
@@ -9,7 +9,7 @@
         <ItemsControl.ItemTemplate>
           <DataTemplate>
             <Border BorderThickness="1" BorderBrush="Black" Margin="5">
-              <controls:PriceGroupItem Margin="5" />
+              <controls:PriceGroup Margin="5" />
             </Border>
           </DataTemplate>
         </ItemsControl.ItemTemplate>
