Switch to EF Core ORM
* This makes it easier for plugins to implement their own database or even modify the auth/game database with migrations
* Access to EF Core tooling like automatic creation of migrations

--- a/src/tools/Netsphere.Tools.ShopEditor/Views/ConnectView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/ConnectView.xaml
@@ -35,20 +35,15 @@
 
                     <TextBox Name="Username" Margin="0 0 0 5"
                             Watermark="Username" UseFloatingWatermark="True"
-                            IsVisible="{Binding ElementName=UseSqlite,Path=IsChecked,Converter={StaticResource NegateBooleanConverter}}"
                             Text="{Binding Username.Value}" />
 
                     <TextBox Name="Password" Margin="0 0 0 5"
                             Watermark="Password" UseFloatingWatermark="True" PasswordChar="*"
-                            IsVisible="{Binding ElementName=UseSqlite,Path=IsChecked,Converter={StaticResource NegateBooleanConverter}}"
                             Text="{Binding Password.Value}" />
 
-                    <TextBox Name="Database" Margin="0 0 0 5"
+                    <TextBox Name="Database"
                             Watermark="Database" UseFloatingWatermark="True"
-                            IsVisible="{Binding ElementName=UseSqlite,Path=IsChecked,Converter={StaticResource NegateBooleanConverter}}"
                             Text="{Binding Database.Value}" />
-
-                    <CheckBox Name="UseSqlite" IsChecked="{Binding UseSqlite.Value}" Content="Use Sqlite" />
                 </StackPanel>
             </Grid>
         </Grid>
