Update Avalonia to 0.8

--- a/src/tools/Netsphere.Tools.ShopEditor/Views/ConnectView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/ConnectView.xaml
@@ -1,5 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        x:Class="Netsphere.Tools.ShopEditor.Views.ConnectView"
         xmlns:converters="clr-namespace:Netsphere.Tools.ShopEditor.Converters"
         Title="Shop Editor - Connect"
         MinHeight="370" MinWidth="290" MaxHeight="370" MaxWidth="290"
