--- a/src/tools/Netsphere.Tools.ShopEditor/Views/EffectsView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/EffectsView.xaml
@@ -1,5 +1,6 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             x:Class="Netsphere.Tools.ShopEditor.Views.EffectsView"
              xmlns:controls="clr-namespace:Netsphere.Tools.ShopEditor.Views.Controls">
 
   <DockPanel>
