--- a/src/tools/Netsphere.Tools.ShopEditor/Views/MainView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/MainView.xaml
@@ -1,5 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        x:Class="Netsphere.Tools.ShopEditor.Views.MainView"
         Title="Shop Editor"
         Height="490" Width="940"
         MinHeight="490" MinWidth="940"
