--- a/src/tools/Netsphere.Tools.ShopEditor/Views/MessageView.xaml
+++ b/src/tools/Netsphere.Tools.ShopEditor/Views/MessageView.xaml
@@ -1,5 +1,6 @@
 ﻿<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        x:Class="Netsphere.Tools.ShopEditor.Views.MessageView"
         HasSystemDecorations="True" ShowInTaskbar="True" SizeToContent="WidthAndHeight"
         MinHeight="300" MinWidth="500">
 
